samples/_failures_safe/1761045216_2dd9b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_36772f77.c: In function ‘tokenize’:
./samples/SAFE/__tmp_36772f77.c:170:5: error: expected declaration or statement at end of input
  170 |     while (*token_count < MAX_TOKENS - 1) {
      |     ^~~~~
./samples/SAFE/__tmp_36772f77.c:170:5: error: expected declaration or statement at end of input
